# ForwardKin4DoF

./: README.md  forwardKin.py  inverseKin.launch  inverseKin.py  manipulator.urdf  manipulator.urdf.xacro  manipulatorInfo.txt  manipulatorMatrices.txt  properties.xacro  simonForwardKin.py
ARM ASSEMBLY/: package.xml
ARM ASSEMBLY/launch/: gazebo.launch
ARM ASSEMBLY/meshes/: link_2.STL  link_5.STL  link_6.STL
ARM ASSEMBLY/urdf/: ARM ASSEMBLY.csv
Inaccurate_Sketch/: forwardKin_IS.py  inverseKin_IS.py  properties.xacro
SW_exported_files/: CMakeLists.txt
SW_exported_files/config/: joint_names_ARM ASSEMBLY.yaml
SW_exported_files/launch/: display.launch
SW_exported_files/urdf/: ARM ASSEMBLY.urdf
launch/: rviz.launch
simon_description/: inertial_macros.xacro  simon.urdf.xacro
simon_moveit_config/: README.md  package.xml
sw_exported_arm_sim/: .setup_assistant  CMakeLists.txt  package.xml
sw_exported_arm_sim/config/: fake_controllers.yaml  gazebo_sw_exported_urdf.urdf  joint_limits.yaml  new_ros_controllers.yaml  ompl_planning.yaml  stomp_planning.yaml  sw_exported_urdf.srdf
sw_exported_arm_sim/launch/: chomp_planning_pipeline.launch.xml  demo.launch  (+15 more)
sw_exported_urdf/: CMakeLists.txt  package.xml
sw_exported_urdf/config/: joint_names_sw_exported_urdf.yaml  joint_trajectory_controller.yaml
sw_exported_urdf/launch/: display.launch  gazebo.launch  sw_exported_urdf.launch
sw_exported_urdf/meshes/: gripper_1.STL  gripper_2.STL  link_1.STL  link_3.STL  link_4.STL
sw_exported_urdf/urdf/: sw_exported_urdf.urdf
urdf/: manipulator.urdf  simon.urdf
